@@ -11,6 +11,7 @@ co.elastic.apm.agent.pluginapi.AbstractSpanInstrumentation$SetNameInstrumentatio
 co.elastic.apm.agent.pluginapi.AbstractSpanInstrumentation$SetTypeInstrumentation
 co.elastic.apm.agent.pluginapi.AbstractSpanInstrumentation$SetTypesInstrumentation
 co.elastic.apm.agent.pluginapi.AbstractSpanInstrumentation$DoCreateSpanInstrumentation
+co.elastic.apm.agent.pluginapi.AbstractSpanInstrumentation$InitializeInstrumentation
 co.elastic.apm.agent.pluginapi.AbstractSpanInstrumentation$SetStartTimestampInstrumentation
 co.elastic.apm.agent.pluginapi.AbstractSpanInstrumentation$SetOutcomeInstrumentation
 co.elastic.apm.agent.pluginapi.AbstractSpanInstrumentation$EndInstrumentation
