@@ -24,7 +24,7 @@
  */
 package co.elastic.apm.api;
 
-import co.elastic.apm.agent.AbstractInstrumentationTest;
+import co.elastic.apm.AbstractApiTest;
 import co.elastic.apm.agent.impl.Scope;
 import co.elastic.apm.agent.impl.TextHeaderMapAccessor;
 import co.elastic.apm.agent.impl.TracerInternalApiUtils;
@@ -37,7 +37,7 @@ import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-class ElasticApmApiInstrumentationTest extends AbstractInstrumentationTest {
+class ElasticApmApiInstrumentationTest extends AbstractApiTest {
 
     @Test
     void testCreateTransaction() {
