@@ -24,8 +24,10 @@
  */
 package co.elastic.apm.agent.springwebflux.testapp;
 
-import co.elastic.apm.api.ElasticApm;
-import co.elastic.apm.api.Transaction;
+import co.elastic.apm.agent.impl.ElasticApmTracer;
+import co.elastic.apm.agent.impl.GlobalTracer;
+import co.elastic.apm.agent.impl.transaction.AbstractSpan;
+import co.elastic.apm.agent.impl.transaction.Transaction;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -149,11 +151,13 @@ public class GreetingAnnotated {
         log.debug("enter customTransactionName");
         try {
             // transaction should be active, even if we are outside of the Mono/Flux execution
-            Transaction transaction = Objects.requireNonNull(ElasticApm.currentTransaction(), "active transaction is required");
-            transaction.setName("user-provided-name");
+            ElasticApmTracer tracer = GlobalTracer.requireTracerImpl();
+            Transaction transaction = Objects.requireNonNull(tracer.currentTransaction(), "active transaction is required");
+            // This mimics setting the name through the public API. We cannot use the public API if we want to test span recycling
+            transaction.withName("user-provided-name", AbstractSpan.PRIO_USER_SUPPLIED);
 
 
-            return greetingHandler.helloMessage("transaction=" + ElasticApm.currentTransaction().getId());
+            return greetingHandler.helloMessage("transaction=" + Objects.requireNonNull(tracer.currentTransaction()).getTraceContext().getId());
         } finally {
             log.debug("exit customTransactionName");
         }
