@@ -24,8 +24,8 @@
  */
 package co.elastic.apm.agent.springwebflux.testapp;
 
-import co.elastic.apm.api.ElasticApm;
-import co.elastic.apm.api.Span;
+import co.elastic.apm.agent.impl.GlobalTracer;
+import co.elastic.apm.agent.impl.transaction.Span;
 import org.springframework.http.codec.ServerSentEvent;
 import org.springframework.stereotype.Component;
 import reactor.core.publisher.Flux;
@@ -35,6 +35,7 @@ import reactor.core.scheduler.Schedulers;
 
 import javax.annotation.Nullable;
 import java.time.Duration;
+import java.util.Objects;
 import java.util.Optional;
 
 @Component
@@ -69,8 +70,8 @@ public class GreetingHandler {
             .delayElements(Duration.ofMillis(delayMillis))
             .map(i -> String.format("child %d", i))
             .doOnNext(name -> {
-                Span span = ElasticApm.currentTransaction().startSpan();
-                span.setName(String.format("%s id=%s", name, span.getId()));
+                Span span = Objects.requireNonNull(GlobalTracer.requireTracerImpl().currentTransaction()).createSpan();
+                span.withName(String.format("%s id=%s", name, span.getTraceContext().getId()));
                 try {
                     fakeWork(durationMillis);
                 } finally {
