@@ -28,6 +28,7 @@ import co.elastic.apm.agent.AbstractInstrumentationTest;
 import co.elastic.apm.agent.impl.transaction.Span;
 import co.elastic.apm.agent.impl.transaction.Transaction;
 import co.elastic.apm.plugin.test.TestClass;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.Objects;
@@ -47,6 +48,11 @@ import static org.assertj.core.api.Assertions.assertThat;
  * from a real external plugin this constraint does not apply.
  */
 class PluginInstrumentationTest extends AbstractInstrumentationTest {
+
+    @BeforeEach
+    void disableObjectRecyclingAssertion() {
+        disableRecyclingValidation();
+    }
 
     @Test
     void testTransactionCreation() {
